--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mapper",
   "version": "0.5.0",
   "description": "A library for connecting things.",
-  "main": "mapper.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "autogypi": "autogypi",
